Start jabber slick
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1365 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -64,9 +64,8 @@ oscar.auto.start.5= \
  file:sc-bundles/meta-cl-slick.jar \
  file:sc-bundles/protocol-icq-slick.jar \
  file:sc-bundles/protocol-sip-slick.jar \
+ file:sc-bundles/protocol-jabber-slick.jar \
  file:sc-bundles/msghistory-slick.jar
-
-# file:sc-bundles/protocol-jabber-slick.jar \
 
 oscar.auto.start.100= \
  file:sc-bundles/slick-runner.jar
