Run jabber slick
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1366 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -11,7 +11,8 @@ test.list=ConfigurationServiceLick \
  MetaContactListServiceLick \
  IcqProtocolProviderSlick \
  SipProtocolProviderServiceLick \
- MsgHistoryServiceLick
+ MsgHistoryServiceLick \
+ JabberProtocolProviderSlick
 
 # Set the name of the meta contact list file to use during testing so that
 # we do not meddle with the file we're using while running the application
