--- a/lib/accounts.properties.template
+++ b/lib/accounts.properties.template
@@ -46,6 +46,12 @@ accounts.icq.CONTACT_LIST=
 #
 
 # ACCOUNT 1
+
+#Indicates whether the servers that the sip accounts belong to, preserve caller
+#and callee info such as addresses or display names. some servers override these
+#(e.g. for NAT supprt) and the tests should not assert it in such cases
+accounts.sip.PRESERVE_PARTICIPANT_INFO=false
+
 # The user id needed to log onto the server specified in the SERVER_ADDRESS
 # property.
 accounts.sip.account1.USER_ID=
@@ -94,30 +100,50 @@ accounts.sip.account2.PROXY_ADDRESS=
 # (Optional)
 accounts.sip.account2.PROXY_PORT=
 
+# JABBER PROPERTIES
 
-#
-#   Jabber Properties
-#
-
-# The address of the first tested account
+# JABBER ACCOUNT 1
+# The user id needed to log onto the server specified in the SERVER_ADDRESS
+# property.
 accounts.jabber.account1.USER_ID=
-# The password of the first tested account
-accounts.jabber.account1.PASSWORD=
-# The server to be used from account 1
-accounts.jabber.account1.SERVER_ADDRESS=
+
 # The server port to be used from account 1
+# (Optional)
 accounts.jabber.account1.SERVER_PORT=
-# The address of the second tested account
+
+# The password (in plain text) needed to log the user specified in USER_ID
+# on the server specified in SERVER_ADDRESS.
+accounts.jabber.account1.PASSWORD=
+
+# The address of the server that this account belongs to (Use '[', ']' for IPv6)
+accounts.jabber.account1.SERVER_ADDRESS=
+
+# JABBER ACCOUNT 2
+
+# The user id needed to log onto the server specified in the SERVER_ADDRESS
+# property.
 accounts.jabber.account2.USER_ID=
-# The password of the second tested account
+
+# The password (in plain text) needed to log the user specified in USER_ID
+# on the server specified in SERVER_ADDRESS.
 accounts.jabber.account2.PASSWORD=
-# The server to be used from account 2
+
+# The address of the server that this account belongs to (Use '[', ']' for IPv6)
 accounts.jabber.account2.SERVER_ADDRESS=
+
 # The server port to be used from account 2
+# (Optional)
 accounts.jabber.account2.SERVER_PORT=
-# The contact list that will be created and will be tested is it created OK.
-# The value of the CONTACT_LIST property
-# must be a space separated string containing elements each of which is in the
-# format: GroupName.ADDRESS
+
+# The following describes the contact list that we will store on the Jabber
+# server for the tested account implementation. The value of the CONTACT_LIST
+# property must be a space separated string containing elements each of which
+# is in the format: GroupName.UIN
+#
+#
+# VERY IMPORTANT!!! All other users in this contact list will be removed and
+# the contacts and contact groups enumerated beneath will be added instead
 accounts.jabber.CONTACT_LIST=
+
+# list of icq accounts to notify during testing (optional)
 accounts.reporting.JABBER_REPORT_LIST=
