--- a/resources/install/debian/rules
+++ b/resources/install/debian/rules
@@ -52,7 +52,8 @@ install: build
 	cp debian/sc-logo-32x32.xpm debian/sip-communicator/usr/share/pixmaps/sip-communicator.xpm
 	cp debian/sip-communicator.desktop debian/sip-communicator/usr/share/applications/
 	cp $(BASEDIR)/lib/*.jar debian/sip-communicator/usr/share/sip-communicator/lib
-	cp $(BASEDIR)/lib/*.properties debian/sip-communicator/usr/share/sip-communicator/lib
+	cp $(BASEDIR)/lib/logging.properties debian/sip-communicator/usr/share/sip-communicator/lib
+	cp $(BASEDIR)/lib/oscar.client.run.properties debian/sip-communicator/usr/share/sip-communicator/lib
 	cp -r $(BASEDIR)/lib/native debian/sip-communicator/usr/share/sip-communicator/lib
 	cp $(BASEDIR)/lib/bundle/shell.jar debian/sip-communicator/usr/share/sip-communicator/lib/bundle/shell.jar
 	cp $(BASEDIR)/lib/bundle/bundlerepository.jar debian/sip-communicator/usr/share/sip-communicator/lib/bundle/bundlerepository.jar
@@ -68,9 +69,11 @@ install: build
 	rm debian/sip-communicator/usr/share/sip-communicator/lib/bcprov-jdk14-130.jar
 	rm debian/sip-communicator/usr/share/sip-communicator/lib/log4j-1.2.8.jar
 
-	# Make oscar deploy its bundles in /tmp
-	sed -i -e "s/oscar.cache.profiledir=sip-communicator.bin/oscar.cache.profiledir=\/tmp\/sip-communicator.bin/" debian/sip-communicator/usr/share/sip-communicator/lib/oscar.client.run.properties
-	sed -i -e "s/oscar.cache.profiledir=sip-communicator.bin/oscar.cache.profiledir=\/tmp\/sip-communicator.bin/" debian/sip-communicator/usr/share/sip-communicator/lib/oscar.unit.test.properties
+	# Remove other unneeded libs
+	rm debian/sip-communicator/usr/share/sip-communicator/lib/junit.jar
+
+	# Make oscar deploy its bundles in ~/.noscar/sip-communicator.bin
+	sed -i -e "s/oscar.cache.profiledir=sip-communicator.bin/oscar.cache.profile=sip-communicator.bin/" debian/sip-communicator/usr/share/sip-communicator/lib/oscar.client.run.properties
 
 
 # Build i386 files here.
