--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -54,7 +54,8 @@ oscar.auto.start.3= \
 
 oscar.auto.start.4= \
  file:sc-bundles/history.jar \
- file:sc-bundles/msghistory.jar
+ file:sc-bundles/msghistory.jar \
+ file:sc-bundles/callhistory.jar
 
 
  oscar.auto.start.66= \
