--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -50,7 +50,8 @@ oscar.auto.start.4= \
  file:sc-bundles/protocol-sip.jar \
  file:sc-bundles/media.jar \
  file:sc-bundles/meta-cl.jar \
- file:sc-bundles/msghistory.jar
+ file:sc-bundles/msghistory.jar \
+ file:sc-bundles/callhistory.jar
 
 oscar.auto.start.5= \
  file:sc-bundles/slickless.jar \
@@ -65,7 +66,8 @@ oscar.auto.start.5= \
  file:sc-bundles/protocol-icq-slick.jar \
  file:sc-bundles/protocol-sip-slick.jar \
  file:sc-bundles/protocol-jabber-slick.jar \
- file:sc-bundles/msghistory-slick.jar
+ file:sc-bundles/msghistory-slick.jar \
+ file:sc-bundles/callhistory-slick.jar
 
 oscar.auto.start.100= \
  file:sc-bundles/slick-runner.jar
