--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -12,6 +12,7 @@ test.list=ConfigurationServiceLick \
  IcqProtocolProviderSlick \
  SipProtocolProviderServiceLick \
  MsgHistoryServiceLick \
+ CallHistoryServiceLick \
  JabberProtocolProviderSlick
 
 # Set the name of the meta contact list file to use during testing so that
