Add DNS SRV query for the jabber account server.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1507 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -29,6 +29,8 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  net.java.stun4j.StunAddress; \
  net.java.stun4j.StunException; \
  javax.net.ssl; \
+ javax.naming; \
+ javax.naming.directory; \
  edu.stanford.ejalbert; \
  edu.stanford.ejalbert.exception; \
  edu.stanford.ejalbert.exceptionhandler;
