--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -16,6 +16,8 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.xml.transform.stream;\
  net.java.stun4j;\
  net.java.stun4j.client;\
+ javax.naming; \
+ javax.naming.directory; \
  javax.net.ssl;
 
 
