sip.jar and sipaccregwizz.jar added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1542 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -50,6 +50,7 @@ oscar.auto.start.3= \
  file:sc-bundles/protocol.jar \
  file:sc-bundles/media.jar \
  file:sc-bundles/protocol-icq.jar \
+ file:sc-bundles/protocol-sip.jar \
  file:sc-bundles/protocol-jabber.jar \
  file:sc-bundles/netaddr.jar \
  file:sc-bundles/meta-cl.jar
@@ -65,6 +66,7 @@ oscar.auto.start.4= \
 
  oscar.auto.start.67= \
  file:sc-bundles/icqaccregwizz.jar \
+ file:sc-bundles/sipaccregwizz.jar \
  file:sc-bundles/jabberaccregwizz.jar
 
 # Uncomment the following lines if you want to run the architect viewer
