Working on the JMF implementation of the media service.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1616 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -15,7 +15,8 @@
 # Note that these classes must be on the system classpath.
 # By default we only configure a ConsoleHandler, which will only
 # show messages at the INFO and above levels.
-handlers= java.util.logging.ConsoleHandler
+handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
+
 
 # To also add the FileHandler, use the following line instead.
 #handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
@@ -26,7 +27,7 @@ handlers= java.util.logging.ConsoleHandler
 # can be overriden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
-.level= INFO
+.level= FINEST
 
 ############################################################
 # Handler specific properties.
@@ -34,10 +35,14 @@ handlers= java.util.logging.ConsoleHandler
 ############################################################
 
 # default file output is in user's home directory.
-java.util.logging.FileHandler.pattern = %h/java%u.log
-java.util.logging.FileHandler.limit = 50000
+java.util.logging.FileHandler.pattern = ./log/sip-communicator%u.log
+java.util.logging.FileHandler.limit = 5000000
 java.util.logging.FileHandler.count = 1
-java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
+java.util.logging.FileHandler.formatter = net.java.sip.communicator.util.ScLogFormatter
+java.util.logging.FileHandler.level = FINEST
+
+
+
 
 # Limit the message that are printed on the console to FINEST and above (all).
 java.util.logging.ConsoleHandler.level = FINEST
@@ -54,8 +59,15 @@ net.kano.level = INFO
 # But we want everything coming from the sip-comm
 net.java.sip.communicator.impl.contactlist.level = FINEST
 net.java.sip.communicator.slick.level = FINEST
+net.java.sip.communicator.impl.level = FINEST
+net.java.sip.communicator.service.level = FINEST
+net.java.sip.communicator.util.level = FINEST
+net.java.sip.communicator.service.configuration.level = FINEST
+net.java.sip.communicator.impl.configuration.level = FINEST
+net.java.sip.communicator.impl.history.level = INFO
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
 com.xyz.foo.level = SEVERE
+sun.awt.level = INFO
 
