--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -31,6 +31,8 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.net.ssl; \
  javax.naming; \
  javax.naming.directory; \
+ javax.sound;\
+ javax.sound.sampled; \
  edu.stanford.ejalbert; \
  edu.stanford.ejalbert.exception; \
  edu.stanford.ejalbert.exceptionhandler;
