--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -16,10 +16,11 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.xml.transform.stream;\
  net.java.stun4j;\
  net.java.stun4j.client;\
+ javax.sound;\
+ javax.sound.sampled; \
  javax.naming; \
  javax.naming.directory; \
  javax.net.ssl;
-
 
 #
 # In case you want testing to run using oscar's graphical ui then uncomment
