--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -2,18 +2,21 @@
 # environment when running automated testing.
 
 # A list of all tests that should be run by the test target of the project.
-test.list=ConfigurationServiceLick \
- MediaServiceLick \
- NetworkAddressManagerServiceLick \
- FileAccessServiceLick \
- HistoryServiceLick \
- SlicklessTests \
+net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  MetaContactListServiceLick \
- IcqProtocolProviderSlick \
  SipProtocolProviderServiceLick \
- MsgHistoryServiceLick \
- CallHistoryServiceLick \
- JabberProtocolProviderSlick
+
+# MediaServiceLick \
+# NetworkAddressManagerServiceLick \
+# FileAccessServiceLick \
+# HistoryServiceLick \
+# SlicklessTests \
+
+
+# IcqProtocolProviderSlick \
+# MsgHistoryServiceLick \
+# CallHistoryServiceLick \
+# JabberProtocolProviderSlick
 
 # Set the name of the meta contact list file to use during testing so that
 # we do not meddle with the file we're using while running the application
