change server to registrar
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1641 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/sipaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/sipaccregwizz/resources.properties
@@ -6,7 +6,7 @@ rememberPassword=Remember password
 uinAndPassword=ID and Password
 advancedOptions=Advanced Options
 ovverideServerOps=Override server default options
-server=Connect Server
+registrar=Registrar
 serverPort=Server port
 proxy=Proxy
 proxyPort=Proxy port
