--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -24,6 +24,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.xml.transform; \
  javax.xml.transform.dom; \
  javax.xml.transform.stream; \
+ sun.security.action; \
  net.java.stun4j; \
  net.java.stun4j.client; \
  net.java.stun4j.StunAddress; \
@@ -54,6 +55,7 @@ oscar.auto.start.3= \
  file:sc-bundles/protocol-icq.jar \
  file:sc-bundles/protocol-sip.jar \
  file:sc-bundles/protocol-jabber.jar \
+ file:sc-bundles/protocol-msn.jar \
  file:sc-bundles/netaddr.jar \
  file:sc-bundles/meta-cl.jar
 
@@ -69,7 +71,8 @@ oscar.auto.start.4= \
  oscar.auto.start.67= \
  file:sc-bundles/icqaccregwizz.jar \
  file:sc-bundles/sipaccregwizz.jar \
- file:sc-bundles/jabberaccregwizz.jar
+ file:sc-bundles/jabberaccregwizz.jar \
+ file:sc-bundles/msnaccregwizz.jar
 
 # Uncomment the following lines if you want to run the architect viewer
 # bundle.
