--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -9,6 +9,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.swing.table; \
  org.w3c.dom; \
  org.xml.sax; \
+ sun.security.action; \
  javax.xml.parsers;\
  org.apache.xml.serializer;\
  javax.xml.transform;\
@@ -50,6 +51,7 @@ oscar.auto.start.4= \
  file:sc-bundles/history.jar \
  file:sc-bundles/protocol-icq.jar \
  file:sc-bundles/protocol-jabber.jar \
+ file:sc-bundles/protocol-msn.jar \
  file:sc-bundles/protocol-sip.jar \
  file:sc-bundles/media.jar \
  file:sc-bundles/meta-cl.jar \
@@ -69,6 +71,7 @@ oscar.auto.start.5= \
  file:sc-bundles/protocol-icq-slick.jar \
  file:sc-bundles/protocol-sip-slick.jar \
  file:sc-bundles/protocol-jabber-slick.jar \
+ file:sc-bundles/protocol-msn-slick.jar \
  file:sc-bundles/msghistory-slick.jar \
  file:sc-bundles/callhistory-slick.jar
 
