--- a/src/net/java/sip/communicator/plugin/msnaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/msnaccregwizz/resources.properties
@@ -1,5 +1,5 @@
 protocolName=MSN
-protocolDescription=The Msn service protocol
+protocolDescription=A protocol to connect and chat on the  MSN Service.
 uin=Email:
 password=Password:
 rememberPassword=Remember password
