--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -56,6 +56,10 @@ java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLo
 
 # We don't want trace logs from joscar and joustsim
 net.kano.level = INFO
+
+# We don't want trace logs from java-jml
+net.sf.cindy.impl.level = INFO
+
 # But we want everything coming from the sip-comm
 net.java.sip.communicator.impl.contactlist.level = FINEST
 net.java.sip.communicator.slick.level = FINEST
