names changed in the registration wizards
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1685 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/jabberaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/jabberaccregwizz/resources.properties
@@ -1,5 +1,5 @@
 protocolName=Jabber
-protocolDescription=The Jabber service protocol
+protocolDescription=The Jabber protocol
 uin=Jabber id:
 password=Password:
 rememberPassword=Remember password
