--- a/src/net/java/sip/communicator/plugin/sipaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/sipaccregwizz/resources.properties
@@ -1,5 +1,5 @@
 protocolName=SIP
-protocolDescription=The SIP service protocol
+protocolDescription=The SIP protocol
 uin=SIP id:
 password=Password:
 rememberPassword=Remember password
