Reenabled disabled unit tests.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1698 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -5,18 +5,15 @@
 net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  MetaContactListServiceLick \
  SipProtocolProviderServiceLick \
-
-# MediaServiceLick \
-# NetworkAddressManagerServiceLick \
-# FileAccessServiceLick \
-# HistoryServiceLick \
-# SlicklessTests \
-
-
-# IcqProtocolProviderSlick \
-# MsgHistoryServiceLick \
-# CallHistoryServiceLick \
-# JabberProtocolProviderSlick
+ MediaServiceLick \
+ NetworkAddressManagerServiceLick \
+ FileAccessServiceLick \
+ HistoryServiceLick \
+ SlicklessTests \
+ MsgHistoryServiceLick \
+ CallHistoryServiceLick \
+ JabberProtocolProviderSlick \
+ IcqProtocolProviderSlick
 
 # Set the name of the meta contact list file to use during testing so that
 # we do not meddle with the file we're using while running the application
