--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -5,7 +5,6 @@
 net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  MetaContactListServiceLick \
  SipProtocolProviderServiceLick \
- MediaServiceLick \
  NetworkAddressManagerServiceLick \
  FileAccessServiceLick \
  HistoryServiceLick \
@@ -14,6 +13,8 @@ net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  CallHistoryServiceLick \
  JabberProtocolProviderSlick \
  IcqProtocolProviderSlick
+
+# MediaServiceLick \
 
 # Set the name of the meta contact list file to use during testing so that
 # we do not meddle with the file we're using while running the application
