Make sure oscar is not running in embedded mode
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1784 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -91,3 +91,4 @@ oscar.startlevel.bundle=100
 #org.osgi.service.http.port=8080
 #osgi.shell.telnet=on
 #oscar.repository.url=file:/home/rickhall/projects/noscar/repository.xml
+oscar.embedded.execution=false
