reduce logging on windows
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1785 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -69,9 +69,11 @@ net.java.sip.communicator.util.level = FINEST
 net.java.sip.communicator.service.configuration.level = FINEST
 net.java.sip.communicator.impl.configuration.level = FINEST
 net.java.sip.communicator.impl.history.level = INFO
+net.java.sip.communicator.impl.gui.level = INFO
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
 com.xyz.foo.level = SEVERE
 sun.awt.level = INFO
+java.awt.level = INFO
 
